XWIKI-20323: Improved reset mail domain resolution
(cherry picked from commit d5c67bb35c5bd156983e8f4418fe07ed197fbe6c)